...
        createdAt: .now,
        updatedAt: .now
    )

    public static let chris = Profile(
        id: UUID(uuidString: "00000000-0000-0000-0000-000000000002")!,
        firstName: "Chris",
        createdAt: .now,
        updatedAt: .now
    )

    public static let jordan = Profile(
        id: UUID(uuidString: "00000000-0000-0000-0000-000000000003")!,
...
